# boz-ripper

./: .env.example  .gitignore  CRITICAL_BUGFIXES.md  DEBUGGING_TV_DETECTION.md  EPISODE_MATCHING_FIX.md  NAS_AUTO_ORGANIZE_FIX.md  PHASE3_IMPLEMENTATION.md  PHASE4_MIGRATION_COMPLETE.md  PHASE4_SQLITE_MIGRATION.md  PHASE4_TESTING_GUIDE.md  README.md  REBUILD_DOCKER.md  REQUIREMENTS.md  SEASON_EPISODE_CONTROLS_IMPLEMENTATION.md  docker-compose.yml  rebuild.bat  rebuild.sh  start_agent.bat
agent/: README.md  pyproject.toml  requirements.txt
agent/config/: config.example.yaml
agent/src/boz_agent/: __init__.py  __main__.py  main.py
agent/src/boz_agent/core/: __init__.py  config.py
agent/src/boz_agent/services/: __init__.py  disc_detector.py  gpu_detector.py  job_runner.py  makemkv.py  server_client.py  thumbnail_extractor.py  vlc_detector.py  vlc_launcher.py  worker.py
agent/tests/: __init__.py  test_config.py
dashboard/: app.py  (+3 more)
server/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
server/migrations/: env.py
server/migrations/versions/: 001_initial_schema.py  002_add_vlc_support.py
server/scripts/: debug_disc.py
server/src/boz_server/: __init__.py  main.py
server/src/boz_server/api/: __init__.py  agents.py  deps.py  discs.py  files.py  jobs.py  thumbnails.py  vlc.py  workers.py
server/src/boz_server/core/: __init__.py  config.py
server/src/boz_server/database/: __init__.py  base.py  config.py  session.py
server/src/boz_server/database/models/: __init__.py  agent.py  disc.py  job.py  tv_show.py  vlc_command.py  worker.py
server/src/boz_server/models/: __init__.py  agent.py  disc.py  job.py  tv_show.py  worker.py
server/src/boz_server/repositories/: __init__.py  agent_repository.py  base.py  disc_repository.py  job_repository.py  tv_season_repository.py  worker_repository.py
server/src/boz_server/services/: __init__.py  agent_manager.py  agent_manager_db.py  discord_client.py  episode_matcher.py  extras_filter.py  job_queue.py  job_queue_db.py  media_namer.py  nas_organizer.py  omdb_client.py  plex_client.py  preview_generator.py  preview_generator_db.py  thetvdb_client.py  thumbnail_storage.py  tv_detector.py  vlc_service.py  worker_manager.py  worker_manager_db.py
server/tests/: __init__.py  test_api.py
(+13 files in other folders)
